// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders again with new data 1`] = `
.emotion-3 {
  height: 100%;
}

.emotion-0 {
  font-weight: normal;
}

.emotion-0::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-2 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<Table
  data={
    Array [
      1,
      2,
      3,
    ]
  }
>
  <div
    className="emotion-3"
  >
    <AutoSizer
      __dataThatTriggersARerenderWhenChanged={
        Array [
          1,
          2,
          3,
        ]
      }
      className="emotion-0"
      defaultHeight={768}
      defaultWidth={1024}
      disableHeight={false}
      disableWidth={false}
      onResize={[Function]}
      style={Object {}}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <MultiGrid
          cellRenderer={[Function]}
          classNameBottomLeftGrid="css-1oay0jc"
          classNameBottomRightGrid=""
          classNameTopLeftGrid=""
          classNameTopRightGrid="css-1oay0jc"
          columnCount={1}
          columnWidth={[Function]}
          enableFixedColumnScroll={true}
          enableFixedRowScroll={true}
          fixedColumnCount={1}
          fixedRowCount={1}
          height={0}
          hideBottomLeftGridScrollbar={true}
          hideTopRightGridScrollbar={true}
          onScroll={[Function]}
          rowCount={4}
          rowHeight={35}
          scrollToColumn={-1}
          scrollToRow={-1}
          style={Object {}}
          styleBottomLeftGrid={Object {}}
          styleBottomRightGrid={Object {}}
          styleTopLeftGrid={Object {}}
          styleTopRightGrid={Object {}}
          width={0}
        />
      </div>
    </AutoSizer>
    <div
      className="emotion-2"
    />
  </div>
</Table>
`;

exports[`Table renders again with new data 2`] = `
.emotion-3 {
  height: 100%;
}

.emotion-0 {
  font-weight: normal;
}

.emotion-0::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-2 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<Table
  data={
    Array [
      4,
      5,
      6,
    ]
  }
>
  <div
    className="emotion-3"
  >
    <AutoSizer
      __dataThatTriggersARerenderWhenChanged={
        Array [
          4,
          5,
          6,
        ]
      }
      className="emotion-0"
      defaultHeight={768}
      defaultWidth={1024}
      disableHeight={false}
      disableWidth={false}
      onResize={[Function]}
      style={Object {}}
    >
      <div
        className="emotion-0"
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <MultiGrid
          cellRenderer={[Function]}
          classNameBottomLeftGrid="css-1oay0jc"
          classNameBottomRightGrid=""
          classNameTopLeftGrid=""
          classNameTopRightGrid="css-1oay0jc"
          columnCount={1}
          columnWidth={[Function]}
          enableFixedColumnScroll={true}
          enableFixedRowScroll={true}
          fixedColumnCount={1}
          fixedRowCount={1}
          height={0}
          hideBottomLeftGridScrollbar={true}
          hideTopRightGridScrollbar={true}
          onScroll={[Function]}
          rowCount={4}
          rowHeight={35}
          scrollToColumn={-1}
          scrollToRow={-1}
          style={Object {}}
          styleBottomLeftGrid={Object {}}
          styleBottomRightGrid={Object {}}
          styleTopLeftGrid={Object {}}
          styleTopRightGrid={Object {}}
          width={0}
        />
      </div>
    </AutoSizer>
    <div
      className="emotion-2"
    />
  </div>
</Table>
`;

exports[`Table renders default 1`] = `
.emotion-16 {
  height: 100%;
}

.emotion-14 {
  font-weight: normal;
}

.emotion-14::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-4 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-4::-webkit-scrollbar {
  display: none;
}

.emotion-15 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

.emotion-0 {
  box-sizing: border-box;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-5 {
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-16"
>
  <div
    class="emotion-14"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:307.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:307.2px;height:35px;max-width:307.2px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-0"
              style="height:35px;left:0;position:absolute;top:0;width:307.2px"
            >
              name
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:307.2px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:716.8px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-4"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:716.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:1021.5999999999999px;height:35px;max-width:1021.5999999999999px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-0"
                style="height:35px;left:0;position:absolute;top:0;width:307.2px"
              >
                role
              </div>
              <div
                class="emotion-0"
                style="height:35px;left:307.2px;position:absolute;top:0;width:307.2px"
              >
                state
              </div>
              <div
                class="emotion-0"
                style="height:35px;left:614.4px;position:absolute;top:0;width:307.2px"
              >
                zipcode
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:307.2px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-4"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:307.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:307.2px;height:70px;max-width:307.2px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-5"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:307.2px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-5"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:307.2px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:716.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:307.2px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:1021.5999999999999px;height:70px;max-width:1021.5999999999999px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-5"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:307.2px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-5"
              data-rowindex="1"
              style="height:35px;left:307.2px;position:absolute;top:0;width:307.2px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-5"
              data-rowindex="1"
              style="height:35px;left:614.4px;position:absolute;top:0;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-5"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:307.2px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-5"
              data-rowindex="2"
              style="height:35px;left:307.2px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-5"
              data-rowindex="2"
              style="height:35px;left:614.4px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-15"
  />
</div>
`;

exports[`Table renders with growToFill cols 1`] = `
.emotion-19 {
  height: 100%;
}

.emotion-17 {
  font-weight: normal;
}

.emotion-17::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-5 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-5::-webkit-scrollbar {
  display: none;
}

.emotion-18 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

.emotion-0 {
  box-sizing: border-box;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-6 {
  box-sizing: border-box;
  border-bottom: 1px solid #DADDE2;
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  class="emotion-19"
>
  <div
    class="emotion-17"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:204.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:204.8px;height:35px;max-width:204.8px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-0"
              style="height:35px;left:0;position:absolute;top:0;width:204.8px"
            >
              name
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:204.8px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:819.2px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-5"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:819.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:1024px;height:35px;max-width:1024px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-0"
                style="height:35px;left:0;position:absolute;top:0;width:204.8px"
              >
                role
              </div>
              <div
                class="emotion-0"
                style="height:35px;left:204.8px;position:absolute;top:0;width:204.8px"
              >
                state
              </div>
              <div
                class="emotion-0"
                style="height:35px;left:409.6px;position:absolute;top:0;width:307.2px"
              >
                zipcode
              </div>
              <div
                class="emotion-0"
                style="height:35px;left:716.8px;position:absolute;top:0;width:307.2px"
              >
                city
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:204.8px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-5"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:204.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:204.8px;height:70px;max-width:204.8px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-6"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:204.8px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-6"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:204.8px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:819.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:204.8px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:1024px;height:70px;max-width:1024px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-6"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:204.8px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-6"
              data-rowindex="1"
              style="height:35px;left:204.8px;position:absolute;top:0;width:204.8px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-6"
              data-rowindex="1"
              style="height:35px;left:409.6px;position:absolute;top:0;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-6"
              data-rowindex="1"
              style="height:35px;left:716.8px;position:absolute;top:0;width:307.2px"
            >
              <strong>
                San Jose
              </strong>
            </div>
            <div
              class="emotion-6"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:204.8px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-6"
              data-rowindex="2"
              style="height:35px;left:204.8px;position:absolute;top:35px;width:204.8px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-6"
              data-rowindex="2"
              style="height:35px;left:409.6px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-6"
              data-rowindex="2"
              style="height:35px;left:716.8px;position:absolute;top:35px;width:307.2px"
            >
              <strong>
                Mountain View
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-18"
  />
</div>
`;
